# aoc-python

./: .flake8  .pre-commit-config.yaml  MANIFEST.in  README.md  environment.yaml  setup.cfg  tests.py  tests.yaml
aoc/: __init__.py  _cli.py  utils.py
aoc/year2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py
