[metadata]
name = aoc
version = 0.1.0
platforms = any
description = Advent of Code solutions
long_description = file: README.md
long_description_content_type = text/x-rst
keywords = advent-of-code
url = https://github.com/pmeier/aoc-python
author = Philip Meier
author_email = github.pmeier@posteo.de
license = BSD-3-Clause


[options]
packages = find:
# FIXME: this doesn't include the plain input files for some reason
include_package_data = True
python_requires = >=3.8

[options.entry_points]
console_scripts =
    aoc=aoc._cli:main
